--- a/growth-acceleration.html
+++ b/growth-acceleration.html
@@ -16,6 +16,7 @@
             line-height: 1.5;
             color: #2d3748;
             font-size: 14px;
+            overflow-x: hidden;
         }
 
         .container {
@@ -32,7 +33,7 @@
             background: rgba(255, 255, 255, 0.98);
             backdrop-filter: blur(8px);
             z-index: 1000;
-            padding: 8px 0;
+            padding: 12px 0;
             box-shadow: 0 1px 8px rgba(0, 0, 0, 0.08);
             border-bottom: 1px solid #e2e8f0;
         }
@@ -41,11 +42,11 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            height: 48px;
+            height: 56px;
         }
 
         .logo {
-            font-size: 18px;
+            font-size: 20px;
             font-weight: 700;
             color: #4c51bf;
             text-decoration: none;
@@ -61,8 +62,8 @@
             text-decoration: none;
             color: #4a5568;
             font-weight: 500;
-            font-size: 14px;
-            padding: 8px 12px;
+            font-size: 15px;
+            padding: 10px 14px;
             border-radius: 6px;
             transition: all 0.2s ease;
         }
@@ -75,11 +76,11 @@
         .cta-button {
             background: #4c51bf;
             color: white;
-            padding: 8px 16px;
+            padding: 10px 18px;
             border-radius: 6px;
             text-decoration: none;
             font-weight: 600;
-            font-size: 14px;
+            font-size: 15px;
             transition: all 0.2s ease;
         }
 
@@ -93,27 +94,39 @@
             display: none;
             flex-direction: column;
             cursor: pointer;
-            padding: 4px;
+            padding: 5px;
         }
 
         .mobile-menu-btn span {
-            width: 20px;
-            height: 2px;
-            background: #4a5568;
-            margin: 2px 0;
+            width: 25px;
+            height: 3px;
+            background: #333;
+            margin: 3px 0;
             transition: 0.3s;
+        }
+
+        .mobile-menu-btn.active span:nth-child(1) {
+            transform: rotate(-45deg) translate(-5px, 6px);
+        }
+
+        .mobile-menu-btn.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .mobile-menu-btn.active span:nth-child(3) {
+            transform: rotate(45deg) translate(-5px, -6px);
         }
 
         .mobile-menu {
             display: none;
             position: fixed;
-            top: 64px;
+            top: 80px;
             left: 0;
             width: 100%;
-            background: white;
-            padding: 16px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            border-bottom: 1px solid #e2e8f0;
+            background: rgba(255, 255, 255, 0.98);
+            backdrop-filter: blur(10px);
+            padding: 2rem;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
 
         .mobile-menu.active {
@@ -122,18 +135,23 @@
 
         .mobile-menu ul {
             list-style: none;
+            text-align: center;
         }
 
         .mobile-menu ul li {
-            margin: 8px 0;
+            margin: 1rem 0;
         }
 
         .mobile-menu ul li a {
             text-decoration: none;
-            color: #4a5568;
+            color: #333;
+            font-size: 1.2rem;
             font-weight: 500;
-            padding: 8px 0;
-            display: block;
+            transition: color 0.3s ease;
+        }
+
+        .mobile-menu ul li a:hover {
+            color: #667eea;
         }
 
         /* Compact Hero */
@@ -141,7 +159,7 @@
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
             padding: 80px 0 40px;
-            margin-top: 64px;
+            margin-top: 80px;
             text-align: center;
         }
 
@@ -160,6 +178,7 @@
             font-size: 2.5rem;
             font-weight: 700;
             margin-bottom: 16px;
+            line-height: 1.2;
         }
 
         .hero p {
@@ -169,6 +188,7 @@
             margin-left: auto;
             margin-right: auto;
             opacity: 0.95;
+            line-height: 1.6;
         }
 
         /* Compact Main Content */
@@ -186,6 +206,7 @@
             margin-bottom: 8px;
             color: #2d3748;
             text-align: center;
+            line-height: 1.3;
         }
 
         .section-subtitle {
@@ -196,6 +217,7 @@
             max-width: 500px;
             margin-left: auto;
             margin-right: auto;
+            line-height: 1.6;
         }
 
         /* Compact Growth Areas Grid */
@@ -282,6 +304,7 @@
             font-weight: 600;
             color: #2d3748;
             margin: 0;
+            line-height: 1.3;
         }
 
         .growth-area p {
@@ -301,6 +324,7 @@
             padding-left: 20px;
             color: #4a5568;
             font-size: 13px;
+            line-height: 1.4;
         }
 
         .growth-features li::before {
@@ -315,7 +339,6 @@
         .metrics-section {
             background: #f7fafc;
             padding: 40px 0;
-            margin: 0 -16px;
         }
 
         .metrics-content {
@@ -365,6 +388,7 @@
             margin-bottom: 12px;
             color: #2d3748;
             font-weight: 700;
+            line-height: 1.3;
         }
 
         .metrics-text p {
@@ -434,7 +458,7 @@
         .strategy-timeline {
             background: #f7fafc;
             padding: 40px 0;
-            margin: 32px -16px;
+            margin-top: 32px;
         }
 
         .timeline-steps {
@@ -486,7 +510,7 @@
             color: white;
             padding: 40px 0;
             text-align: center;
-            margin: 32px -16px 0;
+            margin-top: 32px;
         }
 
         .cta-section h2 {
@@ -542,27 +566,57 @@
 
         /* Footer */
         footer {
-            background: #2d3748;
-            color: #e2e8f0;
+            background: #333;
+            color: white;
             text-align: center;
-            padding: 24px 0;
+            padding: 2rem 0;
         }
 
         footer p {
-            font-size: 13px;
+            font-size: 14px;
+            line-height: 1.5;
         }
 
         /* Mobile Responsive */
         @media (max-width: 768px) {
-            .container { padding: 0 12px; }
-            .nav-links { display: none; }
-            .mobile-menu-btn { display: flex; }
-            .cta-button { display: none; }
-            .logo { font-size: 16px; }
-            .hero { padding: 60px 0 32px; margin-top: 56px; }
-            .hero h1 { font-size: 2rem; }
-            .hero p { font-size: 15px; }
-            .section-title { font-size: 20px; }
+            .container { 
+                padding: 0 16px; 
+            }
+            .nav-links { 
+                display: none; 
+            }
+            .mobile-menu-btn { 
+                display: flex; 
+            }
+            .cta-button { 
+                display: none; 
+            }
+            .logo { 
+                font-size: 1.5rem; 
+            }
+            .hero { 
+                padding: 60px 0 32px; 
+                margin-top: 80px; 
+            }
+            .hero h1 { 
+                font-size: 2rem; 
+                line-height: 1.2;
+                padding: 0 8px;
+            }
+            .hero p { 
+                font-size: 15px;
+                line-height: 1.6;
+                padding: 0 8px;
+            }
+            .section-title { 
+                font-size: 20px;
+                line-height: 1.3;
+                padding: 0 8px;
+            }
+            .section-subtitle {
+                padding: 0 8px;
+                line-height: 1.6;
+            }
             
             /* Horizontal scrolling grid for mobile */
             .growth-areas {
@@ -570,7 +624,8 @@
                 gap: 16px;
                 overflow-x: auto;
                 scroll-snap-type: x mandatory;
-                padding-bottom: 16px;
+                padding: 0 16px 16px 16px;
+                margin: 0 -16px;
                 -webkit-overflow-scrolling: touch;
             }
             
@@ -603,24 +658,86 @@
                 grid-template-columns: 1fr; 
                 gap: 24px;
                 text-align: center;
+                padding: 0 16px;
             }
             .metrics-video { 
                 height: 200px; 
                 order: -1; 
-                max-width: 400px;
+                max-width: 100%;
                 margin: 0 auto;
             }
-            .metrics-grid { grid-template-columns: 1fr 1fr; gap: 12px; }
-            .metric-card { padding: 16px 12px; }
-            .timeline-steps { grid-template-columns: 1fr; }
-            .cta-buttons { flex-direction: column; align-items: center; }
-            .btn-primary, .btn-secondary { width: 200px; text-align: center; }
-            .metrics-section, .strategy-timeline, .cta-section { margin-left: -12px; margin-right: -12px; }
+            .metrics-grid { 
+                grid-template-columns: 1fr 1fr; 
+                gap: 12px;
+                padding: 0 16px;
+            }
+            .metric-card { 
+                padding: 16px 12px; 
+            }
+            .timeline-steps { 
+                grid-template-columns: 1fr;
+                padding: 0 16px;
+            }
+            .timeline-step {
+                padding: 16px;
+            }
+            .cta-section h2 {
+                font-size: 20px;
+                line-height: 1.3;
+                padding: 0 16px;
+            }
+            .cta-section p {
+                padding: 0 16px;
+                line-height: 1.6;
+            }
+            .cta-buttons { 
+                flex-direction: column; 
+                align-items: center;
+                padding: 0 16px;
+            }
+            .btn-primary, .btn-secondary { 
+                width: 200px; 
+                text-align: center; 
+            }
+            footer p {
+                padding: 0 16px;
+                line-height: 1.5;
+            }
         }
 
         @media (max-width: 480px) {
-            .metrics-grid { grid-template-columns: 1fr; }
-            .hero h1 { font-size: 1.75rem; }
+            .container {
+                padding: 0 12px;
+            }
+            .metrics-grid { 
+                grid-template-columns: 1fr;
+                padding: 0 12px;
+            }
+            .hero h1 { 
+                font-size: 1.75rem;
+                padding: 0 4px;
+            }
+            .hero p,
+            .section-title,
+            .section-subtitle {
+                padding: 0 4px;
+            }
+            .cta-section h2,
+            .cta-section p {
+                padding: 0 12px;
+            }
+            .growth-areas {
+                padding: 0 12px 16px 12px;
+                margin: 0 -12px;
+            }
+            .metrics-content,
+            .timeline-steps,
+            .cta-buttons {
+                padding: 0 12px;
+            }
+            footer p {
+                padding: 0 12px;
+            }
         }
 
         /* Scrollbar Styling */
@@ -909,7 +1026,7 @@
         const mobileMenu = document.getElementById('mobileMenu');
 
         mobileMenuBtn.addEventListener('click', function() {
-            mobileMenuBtn.classList.toggle('active');
+            this.classList.toggle('active');
             mobileMenu.classList.toggle('active');
         });
 
@@ -925,8 +1042,10 @@
             const navbar = document.getElementById('navbar');
             if (window.scrollY > 50) {
                 navbar.style.background = 'rgba(255, 255, 255, 0.98)';
+                navbar.style.boxShadow = '0 2px 20px rgba(0, 0, 0, 0.15)';
             } else {
                 navbar.style.background = 'rgba(255, 255, 255, 0.95)';
+                navbar.style.boxShadow = '0 2px 20px rgba(0, 0, 0, 0.1)';
             }
         });
     </script>
